[package]
name = "rustyflow"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Jascha Wanger <jascha@thirdkey.ai>"]
license = "MIT"
description = "A lightweight, high-performance agent framework for Rust, providing elegant abstractions for building complex AI workflows with type safety and async concurrency."
repository = "https://github.com/jaschadub/rustyflow"
homepage = "https://github.com/jaschadub/rustyflow"
documentation = "https://docs.rs/rustyflow"
readme = "README.md"
keywords = ["ai", "agents", "workflow", "async", "framework"]
categories = ["development-tools", "asynchronous"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
futures = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
